Use SetMenuItemInfo instead of EnableMenuItem for the system menu to prevent spurious repainting of the buttons in the title bar. Bug 651905, r=jmathies